--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,16 @@
         svg: { fontCache: 'global' }
       };
     </script>
-    <script
-      id="MathJax-script"
-      defer
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+    <script>
+      window.MathJax = {
+        tex: {
+          inlineMath: [['\\(', '\\)']],
+          displayMath: [['\\[', '\\]'], ['$$','$$']]
+        },
+        svg: { fontCache: 'global' }
+      };
     </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
   </head>
   <body>
     <main class="page-content" aria-label="Content">
