--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Minima’s default styles -->
-    <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <!-- <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> -->
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+
 
     <!-- MathJax -->
     <script>
